# globalise-tools

./: .gitignore  Dockerfile  Makefile  README.md  missing_inv_nrs.txt  notes.md  poetry_scripts.py  pyproject.toml  visualize-annotation.html
data/: NL-HaNA_1.04.02_mets.csv  document_data.json  globalise-documents.csv  inventory-numbers.lst  inventory2dates.json  inventory2timespan.json  metadata_1618-1793_2022-08-30.csv  placename-alternatives.json  typesystem.xml
experimental/: evaluate_orjson.py  example.json  new-inv-nrs.lst
globalise_tools/: __init__.py  annotation_page_factory.py  creator.py  document_metadata.py  events.py  git_tools.py  inception_client.py  io_tools.py  lang_deduction.py  logger_tools.py  make_annotate_filter_input.py  model.py  nav_provider.py  page_xml_fixer.py  pagexml_tools.py  splitting.py  textrepo_tools.py  tools.py  url_factory.py  webanno_tsv_reader.py  webanno_tsv_tools.py  xmi_tools.py
notebooks/: sandbox.ipynb
pipelines/alignment/: Makefile  Overzicht van Generale Missiven in 1.04.02.csv
pipelines/langdetect/: Makefile  README.md  classify_pages.py
pipelines/langdetect/lexicons/: README  da.tsv  de.tsv  en.tsv  es.tsv  fr.tsv  id.tsv  it.tsv  ms.tsv  nl.tsv  nl_voc.tsv  pt.tsv
pipelines/queryexpansion/: Dockerfile  Makefile  README.md  all.config.toml  beroepen.tsv  inthislex.config.toml  nl_voc.config.toml  odwn.config.toml  odwn.tsv
pipelines/queryexpansion/etc/: kweepeer.run.sh  nginx.conf  nginx.run.sh
remote/: Dockerfile  Makefile  Qleverfile  gt-create-annotation-lists-for-all-inventories.sh  gt-fix-n-quads.sh  gt-generate-all-n-quads.sh  gt-upload-all-annotation-lists.sh  rewrite_context.py
remote/contexts/: aaao.json  context.json  crmdig.json  glob.json  globalise.jsonld  iiif.io-api-image-3-context.json  iiif.io-api-presentation-3-context.json
remote/nginx/: default.conf
remote/qlever/: qlever.sh  qlever@.service
remote/qlever-index/: Makefile  Qleverfile
remote/scripts/: get-pagexml-zip.sh  gt-create-annotation-lists-for-all-inventories.sh  gt-make-all-inventory-indices.sh  gt-make-annotate-filter-input.sh  gt-upload-all-annotation-lists.sh  gt-upload-all-entity-linking-csv.sh  gt-upload-all-inventory-indices.sh  gt-upload-annotate-filter-input.sh  ntfy  rewrite_context.py
remote/search-engine-preparations/: Makefile
remote/unzip-plaintext/: Makefile  readme.md
scripts/: alternative-reading-order.py  ar-ctrl.py  experimental-gt-extract-paragraph-text.py  experimental_gt_extract_paragraph_text.py  globalise-create-hyphen-join-csv.py  globalise-extract-text.py  globalise-print-range.py  globalise-process-all-pagexml.py  gt-add-missive-annotations.py  gt-annotations-as-ttl.py  gt-classify-language.py  gt-convert-example-xmi.sh  gt-convert-inception-annotations-2024.py  gt-convert-inception-annotations.py  gt-convert-inventory-dates.py  gt-convert-webanno-tsv-to-web-annotations.py  gt-create-annotation-lists-for-all-inventories.sh  gt-create-annotation-lists-for-inventory-number.py  gt-create-annotation-lists-for-inventory-number.sh  gt-create-hyphen-join-csv.py  gt-create-missive-annotations.py  gt-create-pagexml-map.py  gt-create-test-annotations-for-inventory-number.sh  gt-download-mets.py  gt-export-text-region-data.py  gt-extract-documents.py  gt-extract-htr-word-offsets.py  gt-extract-lines.py  gt-extract-n-grams.py  gt-extract-ner-example.sh  gt-extract-page-nav.py  gt-extract-paragraph-endings.py  gt-extract-paragraph-text.py  gt-extract-scan-url-mapping.py  gt-extract-text.py  gt-fix-pagexml-and-generate-xmi.sh  gt-fix-reading-order.py  gt-generate-all-n-quads.sh  gt-generate-transcription-annotation-pages.py  gt-group-textline-annotations-in-clusters.py  (+78 more)
tests/: test_processed_pagexml.py  test_stam.py  test_url_factory.py  test_webanno_tsv_reader.py  test_xmi.py
tmp/: alternative-reading-order.py  experiment.py  word-range-experiment.py
