[tool.poetry]
name = "globalise-tools"
version = "0.2.0"
description = "A diverse assortment of command-line tools and python libraries for the Globalise Project"
authors = ["Bram Buitendijk <bram.buitendijk@di.huc.knaw.nl>", "Maarten van Gompel <proycon@anaproy.nl>"]
readme = "README.md"
packages = [
    { include = "globalise_tools" },
    { include = "scripts", to = "globalise_tools" },
]

[tool.poetry.dependencies]
python = ">=3.12.0,<3.15"

annorepo-client = "^0.3.1"
appengine-python-standard = "^1.1.3"
blessedtable = "^1.0.0"
colorama = "^0.4.6"
dataclasses-json = "^0.6.7"
dkpro-cassis = "^0.10.1"
hydra-core = "^1.3.2"
icecream = "^2.1.3"
intervaltree = "^3.1.0"
ipykernel = "^7.1.0"
jsondataclass = "^0.3.0"
jsonpath-ng = "^1.7.0"
loguru = "^0.7.3"
multiprocess = "^0.70.17"
orjson = "^3.11.7"
pagexml-tools = "^0.7.1"
pandas = "^2.3.3"
pandas-stubs = "~=2.3.3"
progressbar2 = "^4.2.0"
pycaprio = "^0.3.0"
pyld = "^2.0.4"
rdflib = "^7.2.1"
spacy = "^3.8.7"
stam = ">=0.10.0"
tabulate = "^0.9.0"
textrepo-client = "^0.6.0"
uri = { git = "https://github.com/marrow/uri.git", rev = "5b58db87451ca4680004a8993a56bfc4dafff4d4" }
uuid = "^1.30"
xlsxwriter = "^3.0.3"
xmldict = "^0.4.1"

# use `poetry install --with dev-bram` to use these dependencies
[tool.poetry.group.dev-bram.dependencies]
circuitbreaker = "^2.0.0"
dask = { extras = ["distributed"], version = "^2024.12.1" }
retry = "^0.9.2"
annorepo-client = { path = "/Users/bram/workspaces/annorepo/annorepo-client", develop = true }
#pagexml-tools = { path = "/Users/bram/workspaces/pagexml", develop = true }
provenance-client = { path = "/Users/bram/workspaces/provenance/provenance-python-client", develop = true }
#textrepo-client = { path = "/Users/bram/workspaces/textrepo/textrepo-client-python", develop = true }

[tool.poetry.scripts]
gt-align-rgp = "scripts.gt_align_rgp:main"
gt-align-rgp-lines = "scripts.gt_align_rgp_lines:main"
gt-annotations-as-ttl = "scripts.gt_annotations_as_ttl:main"
gt-classify-language = "scripts.gt_classify_language:main"
gt-convert-inception-annotations = "scripts.gt_convert_inception_annotations:main"
gt-convert-inception-annotations-2024 = "scripts.gt_convert_inception_annotations_2024:main"
gt-convert-inventory-dates = "scripts.gt_convert_inventory_dates:main"
gt-convert-webanno-tsv-to-web-annotations = "scripts.gt_convert_webanno_tsv_to_web_annotations:main"
gt-create-annotation-lists-for-inventory-number = "scripts.gt_create_annotation_lists_for_inventory_number:main"
gt-create-hyphen-join-csv = "scripts.gt_create_hyphen_join_csv:main"
gt-create-missive-annotations = "scripts.gt_create_missive_annotations:main"
gt-create-pagexml-map = "scripts.gt_create_pagexml_map:main"
gt-download-mets = "scripts.gt_download_mets:main"
gt-experiment = "scripts.gt-experiment:main"
gt-export-text-region-data = "scripts.gt_export_text_region_data:main"
gt-extract-documents = "scripts.gt_extract_documents:main"
gt-extract-htr-word-offsets = "scripts.gt_extract_htr_word_offsets:main"
gt-extract-lines = "scripts.gt_extract_lines:main"
gt-extract-n-grams = "scripts.gt_extract_n_grams:main"
gt-extract-page-nav = "scripts.gt_extract_page_nav:main"
gt-extract-paragraph-endings = "scripts.gt_extract_paragraph_endings:main"
gt-extract-paragraph-text = "scripts.gt_extract_paragraph_text:main"
gt-extract-scan-url-mapping = "scripts.gt_extract_scan_url_mapping:main"
gt-extract-text = "scripts.gt_extract_text:main"
gt-fix-reading-order = "scripts.gt_fix_reading_order:main"
gt-fix-reading-order2 = "scripts.gt_fix_reading_order2:main"
gt-generate-manifest-list = "scripts.gt_generate_manifest_list:main"
gt-generate-transcription-annotation-pages = "scripts.gt_generate_transcription_annotation_pages:main"
gt-group-textline-annotations-in-clusters = "scripts.gt_group_textline_annotations_in_clusters:main"
gt-group-to-annotation-page = "scripts.gt_group_to_annotation_page:main"
gt-group-web-annotations = "scripts.gt_group_web_annotations:main"
gt-import-document = "scripts.gt_import_document:main"
gt-inception-client = "scripts.gt_inception_client:main"
gt-list-pagexml-ids-with-incorrect-reading-order = "scripts.gt_list_pagexml_ids_with_incorrect_reading_order:main"
gt-make-annotate-filter-input = "scripts.gt_make_annotate_filter_input:main"
gt-make-globalise-documents-file = "scripts.gt_make_globalise_documents_file:main"
gt-map-pagexml-to-iiif-url = "scripts.gt_map_pagexml_to_iiif_url:main"
gt-merge-manual-corrections = "scripts.gt_merge_manual_corrections:main"
gt-ner-xmi-to-wa = "scripts.gt_ner_xmi_to_wa:main"
gt-pagexml-to-uima-cas = "scripts.gt_pagexml_to_uima_cas:main"
gt-poc = "scripts.gt_poc:main"
gt-print-range = "scripts.gt_print_range:main"
gt-process-all-pagexml = "scripts.gt_process_all_pagexml:main"
gt-process-inception-export = "scripts.gt_process_inception_export:main"
gt-read-webanno-tsv = "scripts.gt_read_webanno_tsv:main"
gt-remove-inv-nr-with-errors-from-processed = "scripts.gt_remove_inv_nr_with_errors_from_processed:main"
gt-remove-metadata-text = "scripts.gt_remove_metadata_text:main"
gt-select-annotations = "scripts.gt_select_annotations:main"
gt-tr-urls = "scripts.gt_tr_urls:main"
gt-untangle-globalise = "scripts.gt_untangle_globalise:main"
gt-update-annotations = "scripts.gt_update_annotations:main"
gt-update-document-metadata = "scripts.gt_update_document_metadata:main"
gt-upload-fixed-pagexml = "scripts.gt_upload_fixed_pagexml:main"
gt-validate-inventory-timespan-completeness = "poetry_scripts:gt_validate_inventory_timespan_completeness"
gt-xmi-to-wa = "scripts.gt_xmi_to_wa:main"
version = 'poetry_scripts:version'
xml-fingerprint = "scripts.xml_fingerprint:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
